[tool.poetry]
name = "proj"
version = "0.1.0"
description = ""
authors = ["Foxicution <foxicution@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"


[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.9.0"
python-lsp-ruff = "^1.6.0"
black = "^23.11.0"
isort = "^5.12.0"
euporie = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
